fixing wrap

--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,7 @@ html, body{
 
 .article{
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
 }
 
